# Pentarch

./: .gitignore  buildAndRun.bat  compile.txt
public/: index.html  index.js  style.css
server/: CMakeLists.txt  server.cpp
